# backend/licitatie-curieri/src/main/java/ro/fmi/unibuc/licitatie_curieri/controller/MenuController.java
@@ -5,6 +5,8 @@ import lombok.extern.slf4j.Slf4j;
 import org.openapitools.api.MenuApi;
 import org.openapitools.model.CreateMenuDto;
 import org.openapitools.model.CreateMenuResponseDto;
+import org.openapitools.model.UpdateMenuDto;
+import org.openapitools.model.UpdateMenuResponseDto;
 import org.springframework.web.bind.annotation.RequestBody;
 import org.springframework.web.bind.annotation.RequestParam;
 import org.springframework.web.bind.annotation.RestController;
@@ -34,5 +36,18 @@ public class MenuController implements MenuApi {
         log.info(String.format(LogMessageUtils.DELETE_MENU, menuId));
 
         menuService.deleteMenu(menuId);
+    }
+
+    @Override
+    public UpdateMenuResponseDto updateMenu(@RequestBody UpdateMenuDto updateMenuDto) {
+        log.info(String.format(LogMessageUtils.CREATE_MENU,
+                updateMenuDto.getName(),
+                updateMenuDto.getPrice(),
+                updateMenuDto.getIngredientsList(),
+                updateMenuDto.getPhoto(),
+                updateMenuDto.getDiscount()
+        ));
+
+        return menuService.updateMenu(updateMenuDto);
     }
 }
