# backend/licitatie-curieri/src/main/resources/openapi/menu.yaml
@@ -68,6 +68,33 @@ paths:
               schema:
                 $ref: 'common.yaml#/components/schemas/GenericApplicationError'
 
+  /UpdateMenu:
+    put:
+      tags:
+        - Menu
+      summary: Update a Menu
+      operationId: updateMenu
+      requestBody:
+        description: Data needed to update a menu
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/UpdateMenu'
+      responses:
+        '200':
+          description: Menu updated successfully.
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/UpdateMenuResponse'
+        '404':
+          description: Menu not found.
+          content:
+            application/json:
+              schema:
+                $ref: 'common.yaml#/components/schemas/GenericApplicationError'
+
 components:
   schemas:
     CreateMenu:
@@ -112,6 +139,75 @@ components:
           type: string
           maxLength: 100
           example: Pizza Diavola
+        price:
+          description: Menu's price
+          type: number
+          format: double
+          example: 44.43
+        ingredientsList:
+          description: Menu's ingredients list
+          type: string
+          maxLength: 500
+          example: Tomato sauce, mozzarella cheese, spicy salami, fresh chili peppers, olives, oregano
+        photo:
+          description: Menu's photo
+          type: string
+          maxLength: 100
+          example: TBD...
+        discount:
+          description: Menu's discount
+          type: number
+          format: double
+          example: 0.00
+
+
+    UpdateMenu:
+      type: object
+      properties:
+        id:
+          description: Menu's ID
+          type: integer
+          format: int64
+          example: 100
+        name:
+          description: Menu's name
+          type: string
+          maxLength: 100
+          example: Pizza Diavola2
+        price:
+          description: Menu's price
+          type: number
+          format: double
+          example: 44.43
+        ingredientsList:
+          description: Menu's ingredients list
+          type: string
+          maxLength: 500
+          example: Tomato sauce, mozzarella cheese, spicy salami, fresh chili peppers, olives, oregano
+        photo:
+          description: Menu's photo
+          type: string
+          maxLength: 100
+          example: TBD...
+        discount:
+          description: Menu's discount
+          type: number
+          format: double
+          example: 0.00
+
+    UpdateMenuResponse:
+      type: object
+      properties:
+        id:
+          description: Menu's ID
+          type: integer
+          format: int64
+          example: 100
+        name:
+          description: Menu's name
+          type: string
+          maxLength: 100
+          example: Pizza Diavola2
         price:
           description: Menu's price
           type: number
